Add writeFile functionallity

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,3 +3,10 @@
 {{name}} | {{breed}}
 
 {{/each}}
+
+<form method="POST" action="/">
+
+<label for="name"></label>
+<input type="text" name="name" id="name">
+<button>Submit</button>
+</form>
