Update CSS for basic styles on all pages

--- a/views/new.hbs
+++ b/views/new.hbs
@@ -4,10 +4,12 @@
     <a href="/">Back to Home</a>
 </nav>
 
+<h2>Put up a pet for adoption</h2>
+
 <p>Fill out the form to put your pet up for adoption</p>
 
 
-<form method="POST" action="/">
+<form method="POST" action="/" class="form">
 
 <label for="id"></label>
 <input type="hidden" name="id" id="id">
