--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,28 @@
+img {
+    width: 200px; 
+    height: 200px;
+    object-fit: cover;
+    object-position: 20% 10%;
+    border-radius: 50%;
+}
+
+h2 {
+    text-align: center;
+    margin: 2em;
+}
+
+h3 {
+    color: red;
+}
+
+hr {
+    margin-top: 5em;
+}
+
+.nav {
+    background-color: rgb(13, 32, 48);
+}
+
 .container {
     display: flex;
     width: 75%;
@@ -21,20 +46,25 @@
 .pet a {
     display: block;
     text-decoration: none;
+    text-align: center;
 }
 
 .pet a:hover{
     background-color: aliceblue;
 }
 
-img {
-    width: 200px; 
-    height: 200px;
-    object-fit: cover;
-    object-position: 20% 10%;
-    border-radius: 50%;
-}
 
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+  }
+
+
+p {
+    color: red;
+}
 
 @media (max-width: 800px) {
     .flex-container {
