--- a/views/pet.hbs
+++ b/views/pet.hbs
@@ -1,5 +1,4 @@
 {{!-- header --}}
-
 <nav>
     <a href="/">Back to home</a>
     <a href="/new">Put a pet up for adoption</a>
@@ -7,16 +6,21 @@
 
 <h3>My name is: {{name}}</h3>
 
-<p><img src="{{image}}" alt="{{name}}"></p>
+
+{{#if isAdopted}}
+<h4>And I have been adopted by {{owner}}!</h4>
+{{/if}}
+
+<img src="{{image}}" alt="{{name}}">
 
 <p>Age: {{age}} | {{breed}} | {{sex}}</p>
 
 <p>Likes: {{likes}}</p>
 <p>About me: {{backstory}}</p>
 
-
+{{#unless isAdopted}}
 <h4>Adopt me</h4>
-<form action="/pets/:id" method="POST">
+<form action="/pets/:id" method="POST" class="form">
 
 <label for="fname">First Name</label>
 <input type="text" name="fname" id="fname">
@@ -36,3 +40,6 @@
 <button>Adopt me</button>
 
 </form>
+{{/unless}}
+
+
