Updated heading styles

--- a/views/new.hbs
+++ b/views/new.hbs
@@ -38,10 +38,10 @@
 <input type="hidden" name="owner" id="owner">
 
 <label for="backstory">Why is this pet going up for adoption</label>
-<input type="text" name="backstory" id="backstory">
+<input type="textarea" name="backstory" id="backstory">
 
 <label for="likes">What likes does this animal have?</label>
-<input type="text" name="likes" id="likes">
+<input type="textarea" name="likes" id="likes">
 
 <label for="image"></label>
 <input type="hidden" name="image" id="image" value="/images/chicken.jpg">
