--- a/views/pet.hbs
+++ b/views/pet.hbs
@@ -11,7 +11,7 @@
 <h4>And I have been adopted by {{owner}}!</h4>
 {{/if}}
 
-<img src="{{image}}" alt="{{name}}">
+<img src="{{image}}" alt="{{name}}" class="pet-image">
 
 <p>Age: {{age}} | {{breed}} | {{sex}}</p>
 
