--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,19 @@
+html{
+    font-family: 'Roboto', sans-serif;
+}
+
 img {
-    width: 200px; 
+    width: 200px;
     height: 200px;
     object-fit: cover;
     object-position: 20% 10%;
     border-radius: 50%;
+}
+
+.pet-image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h2 {
@@ -13,6 +23,11 @@ h2 {
 
 h3 {
     color: red;
+    text-align: center;
+}
+
+h4 {
+    text-align: center;
 }
 
 hr {
@@ -34,7 +49,7 @@ hr {
 }
 
 .pet {
-   text-decoration: none;
+    text-decoration: none;
 }
 
 .pet-name {
@@ -49,25 +64,56 @@ hr {
     text-align: center;
 }
 
-.pet a:hover{
+.pet a:hover {
     background-color: aliceblue;
 }
-
 
 .form {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'Roboto', sans-serif;
-  }
+}
 
+input[type=text]:focus {
+    border: 2px solid #555;
+    margin: 20px;
+}
+
+label {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+button {
+    display: inline-block;
+    padding: 0.46em 1.6em;
+    border: 0.1em solid #000000;
+    margin: 0 0.2em 0.2em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #000000;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    background-color: #FFFFFF;
+    text-align: center;
+    transition: all 0.15s
+}
+
+button:hover {
+    text-shadow: 0 0 2em rgba(255, 255, 255, 1);
+    color:black;
+    border-color: black;
+}
 
 p {
-    color: red;
+    text-align: center;
 }
 
 @media (max-width: 800px) {
     .flex-container {
-      flex-direction: column;
+        flex-direction: column;
     }
-  }
+}
