Create and style partials header

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,9 +1,4 @@
-{{!-- add header partial --}}
-
-<nav>
-    <a href="/new">Put a pet up for adoption</a>
-</nav>
-
+{{>header}}
 
 <h2>Pets avaliable to adopt</h2>
 
