--- a/views/pet.hbs
+++ b/views/pet.hbs
@@ -1,8 +1,4 @@
-{{!-- header --}}
-<nav>
-    <a href="/">Back to home</a>
-    <a href="/new">Put a pet up for adoption</a>
-</nav>
+{{>header}}
 
 <h3>My name is: {{name}}</h3>
 
