--- a/public/styles.css
+++ b/public/styles.css
@@ -141,13 +141,24 @@ ul {
     text-decoration: none;  
   }
   
-  /* Change the link color to #111 (black) on hover */
   li a:hover {
-    background-color: #111;
+    background-color: black;
   }
 
 
-@media (max-width: 800px) {
+@media (min-width: 400px) {
+    .flex-container {
+        flex-direction: column;
+    }
+}
+
+@media (min-width: 550px) {
+    .flex-container {
+        flex-direction: column;
+    }
+}
+
+@media (min-width: 750px) {
     .flex-container {
         flex-direction: column;
     }
